--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -265,17 +265,21 @@
     <string name="bitcoins">bitcoins</string>
     <string name="transaction">Transaction</string>
     <string name="id">ID</string>
+    <string name="size">Size</string>
+    <string name="bytes">bytes</string>
     <string name="version">Version</string>
     <string name="lock_time">Lock Time</string>
     <string name="none">None</string>
     <string name="block">Block</string>
     <string name="inputs">Inputs</string>
     <string name="input">Input</string>
+    <string name="coins_being_spent">Coins being spent</string>
     <string name="sequence">Sequence</string>
     <string name="index">index</string>
     <string name="outpoint">Outpoint</string>
     <string name="outputs">Outputs</string>
     <string name="output">Output</string>
+    <string name="coins_being_sent">Coins being sent/created</string>
     <string name="enter_payment_code">Enter Payment Code/Address</string>
     <string name="scan">Scan</string>
 
