--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,12 @@
 
     <string name="inactive">Inactive</string>
     <string name="loading">Loading</string>
+    <string name="loading_wallets">Loading Wallets</string>
+    <string name="loading_chain">Loading Block Chain</string>
+    <string name="chain_still_loading">
+        The block chain is still loading.
+        Some functions will be disabled until it finishes.
+    </string>
     <string name="synchronized_text">Synchronized</string>
     <string name="finding_peers">Finding Peers</string>
     <string name="connecting_to_peers">Connecting to Peers</string>
@@ -124,6 +130,7 @@
     <string name="confirms_title">Confirms</string>
     <string name="confirmations">Confirmations</string>
     <string name="peers_title">Peers</string>
+    <string name="not_available_abbreviation">N/A</string>
     <string name="nine_plus">9+</string>
     <string name="hash_title">Hash</string>
     <string name="peer">Peer</string>
