Add transaction not found action for when a pending transaction is requested on start and can't be found until the chain is loaded and peers give the transaction.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,7 @@
         The block chain is still loading.
         Some functions will be disabled until it finishes.
     </string>
+    <string name="unable_to_find_transaction">Unable to find transaction</string>
     <string name="synchronized_text">Synchronized</string>
     <string name="finding_peers">Finding Peers</string>
     <string name="connecting_to_peers">Connecting to Peers</string>
