Update service stopping.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -156,6 +156,7 @@
     <string name="progress_title">Synchronizing</string>
     <string name="synchronize">Synchronize</string>
     <string name="stop">Stop</string>
+    <string name="stopping">Stopping</string>
 
     <string name="channel_transactions_name">Transactions</string>
     <string name="channel_transactions_description">
