Fix apostrophe in xml string.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -438,7 +438,7 @@
         if anything happens to your device.
         If you lose your mobile device or it breaks, and you do not have the seed, then no one can
         give your money back to you.
-        This is because Bitcoin Cash is decentralized and no one has access to modify anyone else's
+        This is because Bitcoin Cash is decentralized and no one has access to modify anyone else\'s
         bitcoins without knowing the private keys.
         If you do have your seed written down you can install most Bitcoin Cash wallet apps and
         enter your seed in the recover option to regain access to your bitcoins.
